docs/apache-airflow-providers-google/11.0.0/_sources/_api/tests/system/google/cloud/gcs/example_mysql_to_gcs/index.rst.txt
:py:mod:`tests.system.google.cloud.gcs.example_mysql_to_gcs`
============================================================

.. py:module:: tests.system.google.cloud.gcs.example_mysql_to_gcs

.. autoapi-nested-parse::

   Example DAG using MySQLToGCSOperator.

   This DAG relies on the following OS environment variables

   * AIRFLOW__API__GOOGLE_KEY_PATH - Path to service account key file. Note, you can skip this variable if you
     run this DAG in a Composer environment.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'mysql_to_gcs'

   

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: REGION
   :value: 'europe-west2'

   

.. py:data:: ZONE

   

.. py:data:: NETWORK
   :value: 'default'

   

.. py:data:: CONNECTION_ID

   

.. py:data:: CONNECTION_TYPE
   :value: 'mysql'

   

.. py:data:: BUCKET_NAME

   

.. py:data:: FILE_NAME
   :value: 'result.json'

   

.. py:data:: DB_NAME
   :value: 'testdb'

   

.. py:data:: DB_PORT
   :value: 3306

   

.. py:data:: DB_USER_NAME
   :value: 'root'

   

.. py:data:: DB_USER_PASSWORD
   :value: 'demo_password'

   

.. py:data:: SETUP_MYSQL_COMMAND

   

.. py:data:: SQL_TABLE
   :value: 'test_table'

   

.. py:data:: SQL_CREATE

   

.. py:data:: SQL_INSERT

   

.. py:data:: SQL_SELECT

   

.. py:data:: GCE_MACHINE_TYPE
   :value: 'n1-standard-1'

   

.. py:data:: GCE_INSTANCE_NAME

   

.. py:data:: GCE_INSTANCE_BODY

   

.. py:data:: FIREWALL_RULE_NAME

   

.. py:data:: CREATE_FIREWALL_RULE_COMMAND

   

.. py:data:: DELETE_FIREWALL_RULE_COMMAND

   

.. py:data:: DELETE_PERSISTENT_DISK_COMMAND

   

.. py:data:: log

   

.. py:data:: create_gce_instance

   

.. py:data:: test_run

   

