docs/apache-airflow-providers-google/15.0.0/_sources/_api/tests/system/google/cloud/gcs/example_mysql_to_gcs/index.rst.txt
tests.system.google.cloud.gcs.example_mysql_to_gcs
==================================================

.. py:module:: tests.system.google.cloud.gcs.example_mysql_to_gcs

.. autoapi-nested-parse::

   Example DAG using MySQLToGCSOperator.

   This DAG relies on the following OS environment variables

   * AIRFLOW__API__GOOGLE_KEY_PATH - Path to service account key file. Note, you can skip this variable if you
     run this DAG in a Composer environment.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_mysql_to_gcs.DAG_ID
   tests.system.google.cloud.gcs.example_mysql_to_gcs.ENV_ID
   tests.system.google.cloud.gcs.example_mysql_to_gcs.PROJECT_ID
   tests.system.google.cloud.gcs.example_mysql_to_gcs.REGION
   tests.system.google.cloud.gcs.example_mysql_to_gcs.ZONE
   tests.system.google.cloud.gcs.example_mysql_to_gcs.NETWORK
   tests.system.google.cloud.gcs.example_mysql_to_gcs.CONNECTION_ID
   tests.system.google.cloud.gcs.example_mysql_to_gcs.CONNECTION_TYPE
   tests.system.google.cloud.gcs.example_mysql_to_gcs.BUCKET_NAME
   tests.system.google.cloud.gcs.example_mysql_to_gcs.FILE_NAME
   tests.system.google.cloud.gcs.example_mysql_to_gcs.DB_NAME
   tests.system.google.cloud.gcs.example_mysql_to_gcs.DB_PORT
   tests.system.google.cloud.gcs.example_mysql_to_gcs.DB_USER_NAME
   tests.system.google.cloud.gcs.example_mysql_to_gcs.DB_USER_PASSWORD
   tests.system.google.cloud.gcs.example_mysql_to_gcs.SETUP_MYSQL_COMMAND
   tests.system.google.cloud.gcs.example_mysql_to_gcs.SQL_TABLE
   tests.system.google.cloud.gcs.example_mysql_to_gcs.SQL_CREATE
   tests.system.google.cloud.gcs.example_mysql_to_gcs.SQL_INSERT
   tests.system.google.cloud.gcs.example_mysql_to_gcs.SQL_SELECT
   tests.system.google.cloud.gcs.example_mysql_to_gcs.GCE_MACHINE_TYPE
   tests.system.google.cloud.gcs.example_mysql_to_gcs.GCE_INSTANCE_NAME
   tests.system.google.cloud.gcs.example_mysql_to_gcs.GCE_INSTANCE_BODY
   tests.system.google.cloud.gcs.example_mysql_to_gcs.FIREWALL_RULE_NAME
   tests.system.google.cloud.gcs.example_mysql_to_gcs.CREATE_FIREWALL_RULE_COMMAND
   tests.system.google.cloud.gcs.example_mysql_to_gcs.DELETE_FIREWALL_RULE_COMMAND
   tests.system.google.cloud.gcs.example_mysql_to_gcs.DELETE_PERSISTENT_DISK_COMMAND
   tests.system.google.cloud.gcs.example_mysql_to_gcs.log
   tests.system.google.cloud.gcs.example_mysql_to_gcs.create_gce_instance
   tests.system.google.cloud.gcs.example_mysql_to_gcs.test_run


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'mysql_to_gcs'


.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: REGION
   :value: 'europe-west2'


.. py:data:: ZONE
   :value: 'europe-west2-a'


.. py:data:: NETWORK
   :value: 'default'


.. py:data:: CONNECTION_ID
   :value: ''


.. py:data:: CONNECTION_TYPE
   :value: 'mysql'


.. py:data:: BUCKET_NAME
   :value: 'bucket_mysql_to_gcs_Uninferable'


.. py:data:: FILE_NAME
   :value: 'result.json'


.. py:data:: DB_NAME
   :value: 'testdb'


.. py:data:: DB_PORT
   :value: 3306


.. py:data:: DB_USER_NAME
   :value: 'root'


.. py:data:: DB_USER_PASSWORD
   :value: 'demo_password'


.. py:data:: SETUP_MYSQL_COMMAND
   :value: Multiline-String

   .. raw:: html

      <details><summary>Show Value</summary>

   .. code-block:: python

      """
      sudo apt update &&
      sudo apt install -y docker.io &&
      sudo docker run -d -p 3306:3306 --name testdb     -e MYSQL_ROOT_PASSWORD=demo_password     -e MYSQL_DATABASE=testdb     mysql:8.1.0
      """

   .. raw:: html

      </details>



.. py:data:: SQL_TABLE
   :value: 'test_table'


.. py:data:: SQL_CREATE
   :value: 'CREATE TABLE IF NOT EXISTS testdb.test_table (col_1 INT, col_2 VARCHAR(8))'


.. py:data:: SQL_INSERT
   :value: "INSERT INTO testdb.test_table (col_1, col_2) VALUES (1, 'one'), (2, 'two')"


.. py:data:: SQL_SELECT
   :value: 'SELECT * FROM testdb.test_table'


.. py:data:: GCE_MACHINE_TYPE
   :value: 'n1-standard-1'


.. py:data:: GCE_INSTANCE_NAME
   :value: ''


.. py:data:: GCE_INSTANCE_BODY

.. py:data:: FIREWALL_RULE_NAME
   :value: ''


.. py:data:: CREATE_FIREWALL_RULE_COMMAND

.. py:data:: DELETE_FIREWALL_RULE_COMMAND

.. py:data:: DELETE_PERSISTENT_DISK_COMMAND

.. py:data:: log

.. py:data:: create_gce_instance

.. py:data:: test_run

